# linuxask-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
linuxgpt/: __init__.py  cli.py
linuxgpt/commands/: fix.py  generate.py
linuxgpt/explain/: explainer.py
linuxgpt/history/: search.py
linuxgpt/prompts/: explain.txt  fix.txt  generate.txt
linuxgpt/providers/: llm.py
